// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $2.35
</h1>
`;

exports[`should correctly render ExpensesSummary with nultiple expense 1`] = `
<h1>
  Viewing 
  23
   
  expenses
   totalling 
  $23,423,423.44
</h1>
`;
